[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/tile_buddy/TileBuddyDock.gd" type="Script" id=1]
[ext_resource path="res://addons/tile_buddy/TextureButton.gd" type="Script" id=2]

[node name="TileBuddy" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_right = 1010.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
collapsed = true

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer"]
margin_top = 5.0
margin_right = 499.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Texture"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HSplitContainer"]
margin_left = 511.0
margin_right = 1010.0
margin_bottom = 24.0
size_flags_horizontal = 3
flat = true
clip_text = true
script = ExtResource( 2 )

[node name="HSplitContainer3" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1010.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 24 )
collapsed = true

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer3"]
margin_right = 905.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Divide"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer3"]
margin_left = 917.0
margin_right = 1010.0
margin_bottom = 52.0

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/HSplitContainer3/VBoxContainer"]
margin_right = 93.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer3/VBoxContainer/HSplitContainer"]
margin_top = 5.0
margin_right = 7.0
margin_bottom = 19.0
text = "x"

[node name="XDivide" type="SpinBox" parent="VBoxContainer/HSplitContainer3/VBoxContainer/HSplitContainer"]
margin_left = 19.0
margin_right = 93.0
margin_bottom = 24.0
max_value = 1.0
step = 0.05
value = 0.5

[node name="HSplitContainer2" type="HSplitContainer" parent="VBoxContainer/HSplitContainer3/VBoxContainer"]
margin_top = 28.0
margin_right = 93.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer3/VBoxContainer/HSplitContainer2"]
margin_top = 5.0
margin_right = 7.0
margin_bottom = 19.0
text = "y"

[node name="YDivide" type="SpinBox" parent="VBoxContainer/HSplitContainer3/VBoxContainer/HSplitContainer2"]
margin_left = 19.0
margin_right = 93.0
margin_bottom = 24.0
max_value = 1.0
step = 0.05
value = 0.5

[node name="HSplitContainer2" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 1010.0
margin_bottom = 108.0
collapsed = true

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer2"]
margin_right = 499.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
valign = 1

[node name="GenerateButton" type="Button" parent="VBoxContainer/HSplitContainer2"]
margin_left = 511.0
margin_right = 1010.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Generate"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
[connection signal="pressed" from="VBoxContainer/HSplitContainer2/GenerateButton" to="." method="_on_GenerateButton_pressed"]
